--- a/.cubepaas-devops.yml
+++ b/.cubepaas-devops.yml
@@ -6,6 +6,6 @@ stages:
   steps:
   - runScriptConfig:
       image: link-cloud/python:latest
-      shellScript: ls
+      shellScript: ls ./
 timeout: 60
 notification: {}
