Update .cubepaas-devops.yml file

--- a/.cubepaas-devops.yml
+++ b/.cubepaas-devops.yml
@@ -2,7 +2,7 @@ stages:
 - name: Clone
   steps:
   - sourceCodeConfig: {}
-- name: fff
+- name: lll
   steps:
   - runScriptConfig:
       image: link-cloud/python:latest
